# Myrio

./: .gitignore  CONTRIBUTING.md  Progress.md  README.md  cluster_plots.py  clustering.py  custom_predictions.csv  geno_test_pipeline.yml  init_pipeline.py  install.sh  justfile  lefthook.yml  main.py  originalclusterplot2D.py  originalclusterplot3D.py  prepro.py  pyproject.toml  raxtax_vis.py  sample.fasta  sample.parquet  useful.py  valid_genus_counts.csv
__marimo__/session/: raxtax_vis.py.json
customtest/: .gitignore  EDA.py  feat_eng.py  model_test.py  models.py  read_parquet.py  request.py  species_counts.csv  test.py
customtest/benchmarking/: linear.py  metrics.csv  training_summary_ITS.csv  training_summary_matK.csv  training_summary_rbcL.csv  vis.py
data/blast_db/: ITS.ndb  ITS.nin  ITS.njs  ITS.not  ITS.nto  MatK.nin  MatK.njs  MatK.nog  MatK.nos  MatK.not  MatK.nto  psbA-trnH.ndb  psbA-trnH.nin  psbA-trnH.njs  psbA-trnH.nog  psbA-trnH.nos  rbcL.nin  rbcL.njs  rbcL.nog  rbcL.nos  rbcL.not  rbcL.nto
data/expedition_jardin_botanique/: sample_info.csv
data/flongle_fulvia_expedition/: general_info.csv
data/fulvia_estelle_max_expedition/: general_info.csv  sample_info.csv
data/prunelle_without_purification_expedition/: general_info.csv
data/summer_expedition/: sample_info.csv
notebooks/: radxb_db.py  raxtax_vis.py
output/Allium_Ursinum_ITS_barcode82/: LengthvsQualityScatterPlot_dot.html  LengthvsQualityScatterPlot_kde.html  LengthvsQualityScatterPlot_loglength_kde.html  NanoPlot-report.html  NanoStats.txt  Non_weightedHistogramReadlength.html  Non_weightedLogTransformed_HistogramReadlength.html  WeightedHistogramReadlength.html  WeightedLogTransformed_HistogramReadlength.html  Yield_By_Length.html
output/Cymbopogon_Citrus_Qiagen_matk_rbcL_psbA-trnH_ITS_barcode10/: LengthvsQualityScatterPlot_kde.html  LengthvsQualityScatterPlot_loglength_kde.html  NanoPlot-report.html  NanoStats.txt  (+5 more)
prepr_output/: LengthvsQualityScatterPlot_kde.html  LengthvsQualityScatterPlot_loglength_kde.html  NanoPlot-report.html  NanoStats.txt  Non_weightedHistogramReadlength.html  Non_weightedLogTransformed_HistogramReadlength.html  WeightedHistogramReadlength.html  WeightedLogTransformed_HistogramReadlength.html  Yield_By_Length.html
src/: blastn.py  cli.py  consensus.py  manage_pipeline.py  model.py  preprocessing.py  raxtax.py  selection.py  utils.py
(+34 files in other folders)
